--- a/src/web-api/web-api.fsproj
+++ b/src/web-api/web-api.fsproj
@@ -10,4 +10,9 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\submodules\fsharp-persistence\src\fsharp-persistence.fsproj" />
+    <ProjectReference Include="..\..\submodules\fsharp-web\src\fsharp-web.fsproj" />
+  </ItemGroup>
+
 </Project>
