Update worker.fsproj to include Repository.fs and appsettings.json Update submodules for fsharp-infrastructure, fsharp-persistence, and fsharp-worker

--- a/src/worker/worker.fsproj
+++ b/src/worker/worker.fsproj
@@ -6,8 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="./TaskStepHandlers.fs" />
+    <Compile Include="Repository.fs" />
+    <Compile Include="TaskStepHandlers.fs" />
     <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
