--- a/src/kdmid-scheduler-core/kdmid-scheduler-core.fsproj
+++ b/src/kdmid-scheduler-core/kdmid-scheduler-core.fsproj
@@ -1,19 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>kdmid_scheduler_core</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Domain.fs" />
-    <Compile Include="Core.fs" />  
+    <Compile Include="Mapper.fs" />
+    <Compile Include="Core.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\submodules\fsharp-infrastructure\src\fsharp-infrastructure.fsproj" />
     <ProjectReference Include="..\..\submodules\fsharp-persistence\src\fsharp-persistence.fsproj" />
   </ItemGroup>
-
 </Project>
