--- a/src/kdmid-scheduler-core/kdmid-scheduler-core.fsproj
+++ b/src/kdmid-scheduler-core/kdmid-scheduler-core.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Compile Include="Domain.fs" />
     <Compile Include="Mapper.fs" />
+    <Compile Include="Repository.fs" />
     <Compile Include="Core.fs" />
   </ItemGroup>
   <ItemGroup>
