Refactor module names and types in kdmid-scheduler-core and kdmid-scheduler-worker

--- a/src/kdmid-scheduler-worker/appsettings.json
+++ b/src/kdmid-scheduler-worker/appsettings.json
@@ -9,7 +9,7 @@
       "Belgrade": {
         "Steps": [
           {
-            "Name": "GetAvailableDates",
+            "Name": "FindAvailableDates",
             "IsParallel": false,
             "Steps": []
           }
