Refactor module names and types in kdmid-scheduler-core and kdmid-scheduler-worker

--- a/src/kdmid-scheduler-worker/appsettings.json
+++ b/src/kdmid-scheduler-worker/appsettings.json
@@ -9,9 +9,10 @@
       "Belgrade": {
         "Steps": [
           {
-            "Name": "FindAvailableDates",
-            "IsParallel": false,
-            "Steps": []
+            "Name": "FindAvailableDates"
+          },
+          {
+            "Name": "PropagateFoundResult"
           }
         ],
         "Scheduler": {
