--- a/src/kdmid-scheduler-core/kdmid-scheduler-core.fsproj
+++ b/src/kdmid-scheduler-core/kdmid-scheduler-core.fsproj
@@ -8,8 +8,7 @@
     <Compile Include="Domain.fs" />
     <Compile Include="Mapper.fs" />
     <Compile Include="SerDe.fs" />
-    <Compile Include="MemoryRepository.fs" />
-    <Compile Include="Repository.fs" />
+    <Compile Include="Persistence.fs" />
     <Compile Include="Web.fs" />
     <Compile Include="Core.fs" />
   </ItemGroup>
