Refactor module names and types in kdmid-scheduler-core and kdmid-scheduler-worker

--- a/src/kdmid-scheduler-worker/appsettings.json
+++ b/src/kdmid-scheduler-worker/appsettings.json
@@ -25,6 +25,39 @@
           "TimeShift": 1
         }
       }
+    },
+    "EmbassiesScheduler": {
+      "Tasks": {
+        "Belgrade": {
+          "Steps": [
+            {
+              "Name": "ProcessRussianEmbassy",
+              "IsParallel": true,
+              "Steps": [
+                {
+                  "Name": "FindAvailableDates"
+                },
+                {
+                  "Name": "PropagateFoundResult"
+                }
+              ]
+            },
+            {
+              "Name": "ProcessHungarianEmbassy",
+              "IsParallel": true
+            }
+          ],
+          "Scheduler": {
+            "IsEnabled": true,
+            "IsOnce": false,
+            "StartWork": "",
+            "StopWork": "",
+            "WorkDays": "mon,tue,wed,thu,fri",
+            "Delay": "00:00:20",
+            "TimeShift": 1
+          }
+        }
+      }
     }
   }
 }
