Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -4,15 +4,66 @@
       "Default": "Debug"
     }
   },
-  "KdmidQueueChecker": {
-    "Tasks": {
-      "Belgrade": {
+  "EmbassiesAppointmentsScheduler": {
+    "Name": "Start",
+    "Steps": [
+      {
+        "Name": "Serbia",
+        "IsParallel": true,
         "Steps": [
           {
-            "Name": "FindAvailableDates"
-          },
-          {
-            "Name": "PropagateFoundResult"
+            "Name": "Belgrade",
+            "IsParallel": true,
+            "Steps": [
+              {
+                "Name": "RussianEmbassy",
+                "IsParallel": true,
+                "Steps": [
+                  {
+                    "Name": "GetAvailableDates"
+                  },
+                  {
+                    "Name": "NotifyUsers"
+                  }
+                ],
+                "Scheduler": {
+                  "IsEnabled": true,
+                  "IsOnce": false,
+                  "StartWork": "",
+                  "StopWork": "",
+                  "WorkDays": "mon,tue,wed,thu,fri",
+                  "Delay": "00:00:20"
+                }
+              },
+              {
+                "Name": "HungarianEmbassy",
+                "IsParallel": true,
+                "Steps": [
+                  {
+                    "Name": "GetAvailableDates"
+                  },
+                  {
+                    "Name": "NotifyUsers"
+                  }
+                ],
+                "Scheduler": {
+                  "IsEnabled": true,
+                  "IsOnce": false,
+                  "StartWork": "",
+                  "StopWork": "",
+                  "WorkDays": "mon,tue,wed,thu,fri",
+                  "Delay": "00:00:20"
+                }
+              }
+            ],
+            "Scheduler": {
+              "IsEnabled": true,
+              "IsOnce": false,
+              "StartWork": "",
+              "StopWork": "",
+              "WorkDays": "mon,tue,wed,thu,fri",
+              "Delay": "00:00:20"
+            }
           }
         ],
         "Scheduler": {
@@ -21,43 +72,9 @@
           "StartWork": "",
           "StopWork": "",
           "WorkDays": "mon,tue,wed,thu,fri",
-          "Delay": "00:00:20",
-          "TimeShift": 1
+          "Delay": "00:00:20"
         }
       }
-    },
-    "EmbassiesScheduler": {
-      "Tasks": {
-        "Belgrade": {
-          "Steps": [
-            {
-              "Name": "ProcessRussianEmbassy",
-              "IsParallel": true,
-              "Steps": [
-                {
-                  "Name": "FindAvailableDates"
-                },
-                {
-                  "Name": "PropagateFoundResult"
-                }
-              ]
-            },
-            {
-              "Name": "ProcessHungarianEmbassy",
-              "IsParallel": true
-            }
-          ],
-          "Scheduler": {
-            "IsEnabled": true,
-            "IsOnce": false,
-            "StartWork": "",
-            "StopWork": "",
-            "WorkDays": "mon,tue,wed,thu,fri",
-            "Delay": "00:00:20",
-            "TimeShift": 1
-          }
-        }
-      }
-    }
+    ]
   }
 }
