--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -1,80 +1,77 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug"
+      "Default": "Trace"
     }
   },
-  "EmbassiesAppointmentsScheduler": {
-    "Name": "Start",
-    "Steps": [
-      {
-        "Name": "Serbia",
-        "IsParallel": true,
-        "Steps": [
-          {
-            "Name": "Belgrade",
-            "IsParallel": true,
-            "Steps": [
-              {
-                "Name": "RussianEmbassy",
-                "IsParallel": true,
-                "Steps": [
-                  {
-                    "Name": "GetAvailableDates"
-                  },
-                  {
-                    "Name": "NotifyUsers"
-                  }
-                ],
-                "Scheduler": {
-                  "IsEnabled": true,
-                  "IsOnce": false,
-                  "StartWork": "",
-                  "StopWork": "",
-                  "WorkDays": "mon,tue,wed,thu,fri",
-                  "Delay": "00:00:20"
+  "EmbassiesAppointmentsScheduler": [
+    {
+      "Name": "Serbia",
+      "IsParallel": true,
+      "Steps": [
+        {
+          "Name": "Belgrade",
+          "IsParallel": true,
+          "Steps": [
+            {
+              "Name": "RussianEmbassy",
+              "IsParallel": true,
+              "Steps": [
+                {
+                  "Name": "GetAvailableDates"
+                },
+                {
+                  "Name": "NotifyUsers"
                 }
-              },
-              {
-                "Name": "HungarianEmbassy",
-                "IsParallel": true,
-                "Steps": [
-                  {
-                    "Name": "GetAvailableDates"
-                  },
-                  {
-                    "Name": "NotifyUsers"
-                  }
-                ],
-                "Scheduler": {
-                  "IsEnabled": true,
-                  "IsOnce": false,
-                  "StartWork": "",
-                  "StopWork": "",
-                  "WorkDays": "mon,tue,wed,thu,fri",
-                  "Delay": "00:00:20"
-                }
+              ],
+              "Scheduler": {
+                "IsEnabled": true,
+                "IsOnce": false,
+                "StartWork": "",
+                "StopWork": "",
+                "WorkDays": "mon,tue,wed,thu,fri",
+                "Delay": "00:00:20"
               }
-            ],
-            "Scheduler": {
-              "IsEnabled": true,
-              "IsOnce": false,
-              "StartWork": "",
-              "StopWork": "",
-              "WorkDays": "mon,tue,wed,thu,fri",
-              "Delay": "00:00:20"
+            },
+            {
+              "Name": "HungarianEmbassy",
+              "IsParallel": true,
+              "Steps": [
+                {
+                  "Name": "GetAvailableDates"
+                },
+                {
+                  "Name": "NotifyUsers"
+                }
+              ],
+              "Scheduler": {
+                "IsEnabled": true,
+                "IsOnce": false,
+                "StartWork": "",
+                "StopWork": "",
+                "WorkDays": "mon,tue,wed,thu,fri",
+                "Delay": "00:00:20"
+              }
             }
+          ],
+          "Scheduler": {
+            "IsEnabled": true,
+            "IsOnce": false,
+            "StartWork": "",
+            "StopWork": "",
+            "WorkDays": "mon,tue,wed,thu,fri",
+            "Delay": "00:00:20"
           }
-        ],
-        "Scheduler": {
-          "IsEnabled": true,
-          "IsOnce": false,
-          "StartWork": "",
-          "StopWork": "",
-          "WorkDays": "mon,tue,wed,thu,fri",
-          "Delay": "00:00:20"
         }
+      ],
+      "Scheduler": {
+        "IsEnabled": true,
+        "IsOnce": false,
+        "StartWork": "",
+        "StopWork": "",
+        "WorkDays": "mon,tue,wed,thu,fri",
+        "Delay": "00:00:20"
       }
-    ]
-  }
+    }
+  ]
 }
