Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Error"
+      "Default": "Trace"
     }
   },
   "EmbassiesAppointmentsScheduler": [
@@ -24,7 +24,7 @@
                   "Name": "NotifyUsers"
                 }
               ],
-              "Scheduler": {
+              "Schedule": {
                 "IsEnabled": true,
                 "IsOnce": false,
                 "StartWork": "",
@@ -44,7 +44,7 @@
                   "Name": "NotifyUsers"
                 }
               ],
-              "Scheduler": {
+              "Schedule": {
                 "IsEnabled": true,
                 "IsOnce": false,
                 "StartWork": "",
@@ -54,7 +54,7 @@
               }
             }
           ],
-          "Scheduler": {
+          "Schedule": {
             "IsEnabled": true,
             "IsOnce": false,
             "StartWork": "",
@@ -64,7 +64,7 @@
           }
         }
       ],
-      "Scheduler": {
+      "Schedule": {
         "IsEnabled": true,
         "IsOnce": false,
         "StartWork": "",
