Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -50,27 +50,27 @@
                 "StartWork": "",
                 "StopWork": "",
                 "WorkDays": "mon,tue,wed,thu,fri",
-                "Delay": "00:00:20"
+                "Delay": "00:00:15"
               }
             }
           ],
           "Schedule": {
             "IsEnabled": true,
-            "IsOnce": false,
+            "IsOnce": true,
             "StartWork": "",
             "StopWork": "",
             "WorkDays": "mon,tue,wed,thu,fri",
-            "Delay": "00:00:20"
+            "Delay": "00:00:10"
           }
         }
       ],
       "Schedule": {
         "IsEnabled": true,
-        "IsOnce": false,
+        "IsOnce": true,
         "StartWork": "",
         "StopWork": "",
         "WorkDays": "mon,tue,wed,thu,fri",
-        "Delay": "00:00:20"
+        "Delay": "00:00:05"
       }
     }
   ]
