Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -7,15 +7,16 @@
   "EmbassiesAppointmentsScheduler": [
     {
       "Name": "Serbia",
-      "IsParallel": true,
+      "Parallel": true,
       "Steps": [
         {
           "Name": "Belgrade",
-          "IsParallel": true,
+          "Parallel": true,
           "Steps": [
             {
               "Name": "RussianEmbassy",
-              "IsParallel": true,
+              "Parallel": true,
+              "Recurcive": true,
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
@@ -26,7 +27,6 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "IsOnce": false,
                 "StartWork": "",
                 "StopWork": "",
                 "WorkDays": "mon,tue,wed,thu,fri",
@@ -35,7 +35,7 @@
             },
             {
               "Name": "HungarianEmbassy",
-              "IsParallel": true,
+              "Parallel": true,
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
@@ -46,7 +46,6 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "IsOnce": false,
                 "StartWork": "",
                 "StopWork": "",
                 "WorkDays": "mon,tue,wed,thu,fri",
@@ -56,7 +55,6 @@
           ],
           "Schedule": {
             "IsEnabled": true,
-            "IsOnce": true,
             "StartWork": "",
             "StopWork": "",
             "WorkDays": "mon,tue,wed,thu,fri",
@@ -66,7 +64,6 @@
       ],
       "Schedule": {
         "IsEnabled": true,
-        "IsOnce": true,
         "StartWork": "",
         "StopWork": "",
         "WorkDays": "mon,tue,wed,thu,fri",
