Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -7,16 +7,14 @@
   "EmbassiesAppointmentsScheduler": [
     {
       "Name": "Serbia",
-      "Parallel": true,
       "Steps": [
         {
           "Name": "Belgrade",
-          "Parallel": true,
+          "Recurcive": true,
           "Steps": [
             {
               "Name": "RussianEmbassy",
               "Parallel": true,
-              "Recurcive": true,
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
@@ -27,9 +25,6 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "StartWork": "",
-                "StopWork": "",
-                "WorkDays": "mon,tue,wed,thu,fri",
                 "Delay": "00:00:20"
               }
             },
@@ -46,29 +41,16 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "StartWork": "",
-                "StopWork": "",
-                "WorkDays": "mon,tue,wed,thu,fri",
                 "Delay": "00:00:15"
               }
             }
           ],
           "Schedule": {
             "IsEnabled": true,
-            "StartWork": "",
-            "StopWork": "",
-            "WorkDays": "mon,tue,wed,thu,fri",
-            "Delay": "00:00:10"
+            "WorkDays": "mon,tue,wed,thu,fri,sat"
           }
         }
-      ],
-      "Schedule": {
-        "IsEnabled": true,
-        "StartWork": "",
-        "StopWork": "",
-        "WorkDays": "mon,tue,wed,thu,fri",
-        "Delay": "00:00:05"
-      }
+      ]
     }
   ]
 }
