--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -10,11 +10,11 @@
       "Steps": [
         {
           "Name": "Belgrade",
-          "Recurcive": true,
           "Steps": [
             {
               "Name": "RussianEmbassy",
               "Parallel": true,
+              "Recurcive": true,
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
@@ -25,12 +25,14 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "Delay": "00:00:20"
+                "Delay": "00:00:20",
+                "WorkDays": "mon,tue,wed,thu,fri"
               }
             },
             {
               "Name": "HungarianEmbassy",
               "Parallel": true,
+              "Recurcive": true,
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
@@ -41,7 +43,8 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "Delay": "00:00:15"
+                "Delay": "00:00:15",
+                "WorkDays": "mon,tue,wed,thu,fri"
               }
             }
           ],
