Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -50,7 +50,7 @@
           ],
           "Schedule": {
             "IsEnabled": true,
-            "WorkDays": "mon,tue,wed,thu,fri,sat"
+            "WorkDays": "mon,tue,wed,thu,fri,sat,sun"
           }
         }
       ]
