Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Success"
+      "Default": "Trace"
     }
   },
   "EmbassiesAppointmentsScheduler": [
@@ -14,7 +14,9 @@
             {
               "Name": "RussianEmbassy",
               "Parallel": true,
-              "Recurcive": true,
+              "Recursively": true,
+              "Delay": "00:00:20",
+              "Times": 5,
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
@@ -25,14 +27,14 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "Delay": "00:00:05",
                 "WorkDays": "mon,tue,wed,thu,fri"
               }
             },
             {
               "Name": "HungarianEmbassy",
               "Parallel": true,
-              "Recurcive": true,
+              "Delay": "00:00:10",
+              "Recursively": true,
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
@@ -43,7 +45,6 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "Delay": "00:00:02",
                 "WorkDays": "mon,tue,wed,thu,fri"
               }
             }
