Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace"
+      "Default": "Success"
     }
   },
   "EmbassiesAppointmentsScheduler": [
@@ -15,8 +15,8 @@
               "Name": "RussianEmbassy",
               "Parallel": true,
               "Recursively": true,
-              "Delay": "00:00:20",
-              "Times": 5,
+              "Delay": "00:00:05",
+              "Duration": "00:00:20",
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
