Updated embassy handlers, logging level, and task scheduling
Updated `handleRussianEmbassy` and `handleHungarianEmbassy` functions in `Core.fs` for improved error handling and messaging. Replaced `NotifyUsers` node in `Core.fs` and adjusted logging level in `appsettings.json` from "Success" to "Warning". Reduced "RussianEmbassy" step duration and modified "HungarianEmbassy" step delay in `appsettings.json`. Marked `fsharp-infrastructure` and `fsharp-worker` subprojects as dirty. Added new `Threading` module to `DSL.fs` and modified `handleNodes` and `handleNode` functions. Renamed `message` member in error types in `Domain.fs`. Removed `Delay` and `Limit` properties from `INodeHandle` type. Updated `runTask` function in `Core.fs` and removed `Delay` property from `Task` type in `Domain.fs` and `Mapper.fs`. Modified `getExpirationToken` function in `Scheduler.fs` for better token management.

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Success"
+      "Default": "Warning"
     }
   },
   "EmbassiesAppointmentsScheduler": [
@@ -15,14 +15,17 @@
               "Name": "RussianEmbassy",
               "Parallel": true,
               "Recursively": true,
-              "Delay": "00:00:05",
-              "Duration": "00:00:20",
+              "Duration": "00:00:10",
               "Steps": [
                 {
                   "Name": "GetAvailableDates"
                 },
                 {
-                  "Name": "NotifyUsers"
+                  "Name": "NotifyUsers",
+                  "Schedule": {
+                    "IsEnabled": true,
+                    "Delay": "00:00:01"
+                  }
                 }
               ],
               "Schedule": {
@@ -33,7 +36,6 @@
             {
               "Name": "HungarianEmbassy",
               "Parallel": true,
-              "Delay": "00:00:10",
               "Recursively": true,
               "Steps": [
                 {
@@ -45,7 +47,8 @@
               ],
               "Schedule": {
                 "IsEnabled": true,
-                "WorkDays": "mon,tue,wed,thu,fri"
+                "WorkDays": "mon,tue,wed,thu,fri",
+                "Delay": "00:00:10"
               }
             }
           ],
