Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -4,42 +4,45 @@
       "Default": "Warning"
     }
   },
-  "EmbassiesAppointmentsScheduler": [
-    {
-      "Name": "Serbia",
-      "Steps": [
-        {
-          "Name": "Belgrade",
-          "Steps": [
-            {
-              "Name": "RussianEmbassy",
-              "Parallel": true,
-              "Recursively": true,
-              "Duration": "00:00:10",
-              "Steps": [
-                {
-                  "Name": "GetAvailableDates"
-                },
-                {
-                  "Name": "NotifyUsers",
-                  "Schedule": {
-                    "IsEnabled": true,
-                    "Delay": "00:00:01"
+  "Worker": {
+    "Name": "Embassies Appointments Scheduler",
+    "Steps": [
+      {
+        "Name": "Serbia",
+        "Steps": [
+          {
+            "Name": "Belgrade",
+            "Steps": [
+              {
+                "Name": "RussianEmbassy",
+                "Parallel": true,
+                "Recursively": true,
+                "Duration": "00:00:10",
+                "Steps": [
+                  {
+                    "Name": "GetAvailableDates"
+                  },
+                  {
+                    "Name": "NotifyUsers",
+                    "Schedule": {
+                      "IsEnabled": true,
+                      "Delay": "00:00:01"
+                    }
                   }
+                ],
+                "Schedule": {
+                  "IsEnabled": true,
+                  "WorkDays": "mon,tue,wed,thu,fri"
                 }
-              ],
-              "Schedule": {
-                "IsEnabled": true,
-                "WorkDays": "mon,tue,wed,thu,fri"
               }
+            ],
+            "Schedule": {
+              "IsEnabled": true,
+              "WorkDays": "mon,tue,wed,thu,fri,sat,sun"
             }
-          ],
-          "Schedule": {
-            "IsEnabled": true,
-            "WorkDays": "mon,tue,wed,thu,fri,sat,sun"
           }
-        }
-      ]
-    }
-  ]
+        ]
+      }
+    ]
+  }
 }
