Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "Worker": {
-    "Name": "Embassies Appointments Scheduler",
+    "Name": "Scheduler",
     "Steps": [
       {
         "Name": "Serbia",
