Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace"
+      "Default": "Debug"
     }
   },
   "Worker": {
@@ -27,6 +27,42 @@
                     "Schedule": {
                       "IsEnabled": true,
                       "Delay": "00:00:01"
+                    }
+                  }
+                ],
+                "Schedule": {
+                  "IsEnabled": true,
+                  "WorkDays": "mon,tue,wed,thu,fri"
+                }
+              }
+            ],
+            "Schedule": {
+              "IsEnabled": true,
+              "WorkDays": "mon,tue,wed,thu,fri,sat,sun"
+            }
+          }
+        ]
+      },
+      {
+        "Name": "Hungary",
+        "Steps": [
+          {
+            "Name": "Butapest",
+            "Steps": [
+              {
+                "Name": "RussianEmbassy",
+                "Parallel": true,
+                "Recursively": true,
+                "Duration": "00:00:10",
+                "Steps": [
+                  {
+                    "Name": "GetAvailableDates"
+                  },
+                  {
+                    "Name": "NotifyUsers",
+                    "Schedule": {
+                      "IsEnabled": true,
+                      "Delay": "00:00:05"
                     }
                   }
                 ],
