Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -9,6 +9,7 @@
     "Steps": [
       {
         "Name": "Serbia",
+        "Parallel": true,
         "Steps": [
           {
             "Name": "Belgrade",
@@ -45,6 +46,7 @@
       },
       {
         "Name": "Hungary",
+        "Parallel": true,
         "Steps": [
           {
             "Name": "Butapest",
