Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug"
+      "Default": "Warning"
     }
   },
   "Worker": {
@@ -33,6 +33,7 @@
                 ],
                 "Schedule": {
                   "IsEnabled": true,
+                  "Limit": 10,
                   "WorkDays": "mon,tue,wed,thu,fri"
                 }
               }
@@ -49,7 +50,7 @@
         "Parallel": true,
         "Steps": [
           {
-            "Name": "Butapest",
+            "Name": "Budapest",
             "Steps": [
               {
                 "Name": "RussianEmbassy",
@@ -70,6 +71,7 @@
                 ],
                 "Schedule": {
                   "IsEnabled": true,
+                  "Limit": 5,
                   "WorkDays": "mon,tue,wed,thu,fri"
                 }
               }
