Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug"
     }
   },
   "Worker": {
@@ -21,19 +21,20 @@
                 "Duration": "00:00:10",
                 "Steps": [
                   {
-                    "Name": "GetAvailableDates"
+                    "Name": "GetAvailableDates",
+                    "Duration": "00:00:05"
                   },
                   {
                     "Name": "NotifyUsers",
                     "Schedule": {
                       "IsEnabled": true,
-                      "Delay": "00:00:01"
+                      "Delay": "00:00:05"
                     }
                   }
                 ],
                 "Schedule": {
                   "IsEnabled": true,
-                  "Limit": 10,
+                  "Limit": 3,
                   "WorkDays": "mon,tue,wed,thu,fri"
                 }
               }
@@ -65,13 +66,13 @@
                     "Name": "NotifyUsers",
                     "Schedule": {
                       "IsEnabled": true,
-                      "Delay": "00:00:05"
+                      "Delay": "00:00:02"
                     }
                   }
                 ],
                 "Schedule": {
                   "IsEnabled": true,
-                  "Limit": 5,
+                  "Limit": 10,
                   "WorkDays": "mon,tue,wed,thu,fri"
                 }
               }
