chore: Update eas-worker configuration to use YAML format

--- a/src/eas-worker/eas-worker.fsproj
+++ b/src/eas-worker/eas-worker.fsproj
@@ -15,6 +15,9 @@
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="appsettings.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\submodules\fsharp-worker\src\fsharp-worker.fsproj" />
