--- a/src/eas-worker/appsettings.yaml
+++ b/src/eas-worker/appsettings.yaml
@@ -1,5 +1,3 @@
-# @format
-
 Logging:
   LogLevel:
     Default: Debug
@@ -18,13 +16,14 @@ Worker:
               Duration: 00:00:10
               Steps:
                 - Name: GetAvailableDates
+                  Duration: 00:00:05
                 - Name: NotifyUsers
                   Schedule:
                     IsEnabled: true
-                    Delay: 00:00:01
+                    Delay: 00:00:05
               Schedule:
                 IsEnabled: true
-                Limit: 5
+                Limit: 3
                 WorkDays: mon,tue,wed,thu,fri
           Schedule:
             IsEnabled: true
@@ -32,7 +31,7 @@ Worker:
     - Name: Hungary
       Parallel: true
       Steps:
-        - Name: Butapest
+        - Name: Budapest
           Steps:
             - Name: RussianEmbassy
               Parallel: true
@@ -43,9 +42,10 @@ Worker:
                 - Name: NotifyUsers
                   Schedule:
                     IsEnabled: true
-                    Delay: 00:00:05
+                    Delay: 00:00:02
               Schedule:
                 IsEnabled: true
+                Limit: 10
                 WorkDays: mon,tue,wed,thu,fri
           Schedule:
             IsEnabled: true
