--- a/src/eas-worker/appsettings.yaml
+++ b/src/eas-worker/appsettings.yaml
@@ -1,3 +1,5 @@
+# @format
+
 Logging:
   LogLevel:
     Default: Debug
@@ -33,7 +35,7 @@ Worker:
       Steps:
         - Name: Budapest
           Steps:
-            - Name: RussianEmbassy
+            - Name: HungarianEmbassy
               Parallel: true
               Recursively: true
               Duration: 00:00:10
