Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -35,13 +35,13 @@
                 "Schedule": {
                   "IsEnabled": true,
                   "Limit": 3,
-                  "WorkDays": "mon,tue,wed,thu,fri"
+                  "Workdays": "mon,tue,wed,thu,fri"
                 }
               }
             ],
             "Schedule": {
               "IsEnabled": true,
-              "WorkDays": "mon,tue,wed,thu,fri,sat,sun"
+              "Workdays": "mon,tue,wed,thu,fri,sat,sun"
             }
           }
         ]
@@ -73,13 +73,13 @@
                 "Schedule": {
                   "IsEnabled": true,
                   "Limit": 10,
-                  "WorkDays": "mon,tue,wed,thu,fri"
+                  "Workdays": "mon,tue,wed,thu,fri"
                 }
               }
             ],
             "Schedule": {
               "IsEnabled": true,
-              "WorkDays": "mon,tue,wed,thu,fri,sat,sun"
+              "Workdays": "mon,tue,wed,thu,fri,sat,sun"
             }
           }
         ]
