--- a/src/eas-core/eas-core.fsproj
+++ b/src/eas-core/eas-core.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="SerDe.fs" />
     <Compile Include="Persistence.fs" />
     <Compile Include="Core.fs" />
+    <Compile Include="Api.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\submodules\fsharp-infrastructure\src\fsharp-infrastructure.fsproj" />
