--- a/src/eas-core/eas-core.fsproj
+++ b/src/eas-core/eas-core.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Domain.fs" />
     <Compile Include="Mapper.fs" />
     <Compile Include="Persistence.fs" />
+    <Compile Include="Web.fs" />
     <Compile Include="Core.fs" />
   </ItemGroup>
   <ItemGroup>
