Refactor embassy appointment scheduler configuration

--- a/src/eas-worker/appsettings.json
+++ b/src/eas-worker/appsettings.json
@@ -15,17 +15,17 @@
             "Name": "Belgrade",
             "Steps": [
               {
-                "Name": "RussianEmbassy",
+                "Name": "Russian",
                 "Parallel": true,
                 "Recursively": true,
                 "Duration": "00:00:10",
                 "Steps": [
                   {
-                    "Name": "GetAvailableDates",
+                    "Name": "Look for appointments",
                     "Duration": "00:00:05"
                   },
                   {
-                    "Name": "NotifyUsers",
+                    "Name": "Notify users",
                     "Schedule": {
                       "IsEnabled": true,
                       "Delay": "00:00:05"
@@ -34,46 +34,8 @@
                 ],
                 "Schedule": {
                   "IsEnabled": true,
-                  "Limit": 3,
-                  "Workdays": "mon,tue,wed,thu,fri"
-                }
-              }
-            ],
-            "Schedule": {
-              "IsEnabled": true,
-              "Workdays": "mon,tue,wed,thu,fri,sat,sun"
-            }
-          }
-        ]
-      },
-      {
-        "Name": "Hungary",
-        "Parallel": true,
-        "Steps": [
-          {
-            "Name": "Budapest",
-            "Steps": [
-              {
-                "Name": "RussianEmbassy",
-                "Parallel": true,
-                "Recursively": true,
-                "Duration": "00:00:10",
-                "Steps": [
-                  {
-                    "Name": "GetAvailableDates"
-                  },
-                  {
-                    "Name": "NotifyUsers",
-                    "Schedule": {
-                      "IsEnabled": true,
-                      "Delay": "00:00:02"
-                    }
-                  }
-                ],
-                "Schedule": {
-                  "IsEnabled": true,
-                  "Limit": 10,
-                  "Workdays": "mon,tue,wed,thu,fri"
+                  "Limit": 2,
+                  "Workdays": "mon,tue,wed,thu,fri,sat,sun"
                 }
               }
             ],
