--- a/src/eas-worker/appsettings.yaml
+++ b/src/eas-worker/appsettings.yaml
@@ -2,7 +2,7 @@
 
 Logging:
   LogLevel:
-    Default: Information
+    Default: Debug
 
 Worker:
   Name: Scheduler
@@ -12,14 +12,14 @@ Worker:
       Steps:
         - Name: Belgrade
           Steps:
-            - Name: RussianEmbassy
+            - Name: Russian
               Parallel: true
               Recursively: true
               Duration: 00:00:10
               Steps:
-                - Name: GetAvailableDates
+                - Name: Look for appointments
                   Duration: 00:00:05
-                - Name: NotifyUsers
+                - Name: Notify users
                   Schedule:
                     IsEnabled: true
                     Delay: 00:00:05
@@ -27,28 +27,6 @@ Worker:
                 IsEnabled: true
                 Limit: 2
                 Workdays: mon,tue,wed,thu,fri,sat,sun
-          Schedule:
-            IsEnabled: true
-            Workdays: mon,tue,wed,thu,fri,sat,sun
-    - Name: Hungary
-      Parallel: true
-      Steps:
-        - Name: Budapest
-          Steps:
-            - Name: RussianEmbassy
-              Parallel: true
-              Recursively: true
-              Duration: 00:00:10
-              Steps:
-                - Name: GetAvailableDates
-                - Name: NotifyUsers
-                  Schedule:
-                    IsEnabled: true
-                    Delay: 00:00:02
-              Schedule:
-                IsEnabled: true
-                Limit: 5
-                WorkDays: mon,tue,wed,thu,fri,sat,sun
           Schedule:
             IsEnabled: true
             Workdays: mon,tue,wed,thu,fri,sat,sun
